# agentic-vid-editor

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml  harness-execute.yml  harness-render-nightly.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/notes/: future-implementation.md
docs/plans/: 2026-03-07-architecture-design.md  2026-03-07-landscape-research.md  2026-03-08-architecture-design-v2.md  2026-03-08-review-response.md  2026-03-08-review-v2-response.md  2026-03-09-full-roadmap-design.md  2026-03-09-phase1-foundation.md  2026-03-09-phase2-core-editing-design.md  2026-03-10-phase3-4-preview-agent-design.md  2026-03-10-phase3-color-compositing-design.md  2026-03-10-vision-scene-detection-design.md  2026-03-10-vision-scene-detection-plan.md  2026-03-11-phase5-gpu-color-plan.md  2026-03-11-phase6-advanced-editing-plan.md  2026-03-14-phase7-multi-agent-hardening-design.md  2026-03-15-phase5-gpu-color-pipeline-design.md  2026-03-15-phase5-implementation.md
docs/review/: 2026-03-08-architecture-review-v2.md  2026-03-08-architecture-review.md  2026-03-08-architecture-v2-review.md
docs/superpowers/plans/: 2026-03-14-phase8-web-ui.md  2026-03-16-phase9-open-world-agent.md  2026-04-22-phase1-safety-foundation.md  2026-04-22-phase2-harness-rung-a.md
docs/superpowers/specs/: 2026-03-12-e2e-orchestrator-workflow-tests-design.md  2026-03-14-phase8-web-ui-design.md  2026-03-16-context-optimizer-design.md  2026-03-16-phase9-open-world-agent-design.md  2026-04-21-trustworthy-harness-design.md
plugins/: meson.build
plugins/gst-libplacebo/: gstplacebofilter.c  gstplacebofilter.h  meson.build  plugin.c
plugins/gst-ocio/: gstociofilter.c  gstociofilter.h  meson.build  ocio_processor.cpp  ocio_processor.h  plugin.c
src/ave/: __init__.py  _compat.py  utils.py
src/ave/agent/: __init__.py  activity.py  dependencies.py  domains.py  errors.py  multi_agent.py  orchestrator.py  registry.py  researcher.py  roles.py  sdk_bridge.py  search.py  session.py  state_sync.py  transitions.py  verification.py
src/ave/harness/: __init__.py  adapter.py  cli.py  loader.py  pytest_plugin.py  schema.py  task.py
src/ave/ingest/: probe.py  registry.py  transcoder.py
src/ave/interchange/: __init__.py  otio_export.py  otio_import.py
src/ave/mcp/: __init__.py  jobs.py  server.py  types.py
src/ave/optimize/: __init__.py  artifacts.py  campaign.py  datasets.py  evaluate.py  metrics.py  store.py
src/ave/plugins/: __init__.py  discovery.py  loader.py
src/ave/preview/: __init__.py  cache.py  frame.py  (+1 more)
tests/: conftest.py  test_compat.py  test_fixtures.py  test_integration.py
tests/fixtures/: generate.py
tests/test_agent/: test_activity.py  test_dependencies.py  test_domain_tools.py  test_domains.py  test_multi_agent.py  test_new_domain_tools.py  test_orchestrator.py  test_registry.py  test_research_tools.py  test_researcher.py  test_roles.py  test_search.py  test_session.py  test_session_immutability.py  test_session_plugins.py  test_session_scope.py  test_session_turns.py  test_state_sync.py  test_tool_discovery.py  test_transitions.py  test_vfx_tools.py
tests/test_e2e/: test_10bit_pipeline.py  test_agent_integration.py  test_audio_e2e.py  test_clip_identity_e2e.py  test_color_e2e.py  test_editing_e2e.py  test_orchestrator_workflows.py  test_phase7_8_integration.py  test_phase7_integration.py  test_preview_integration.py  test_scene_e2e.py
tests/test_harness/: test_adapter.py  test_artifacts_store.py  test_cli.py  test_evaluators_safety.py  test_evaluators_scope.py  test_evaluators_state_diff.py  test_evaluators_tool_selection.py  test_execute_solver.py  test_feedback_eval_log.py  test_feedback_scenarios_to_dataset.py  test_fixtures_builder.py  test_judges_claude_vlm.py  test_judges_deterministic.py  test_judges_ensemble.py  test_judges_router.py  test_loader.py  test_module_skeleton.py  test_plan_solver.py  test_pytest_plugin.py  test_render_solver.py  test_safety_properties.py  test_scenarios.py  test_schema.py  test_scorers.py  test_scorers_safety.py  test_scorers_state_diff.py  test_scorers_vlm_judge.py  test_task.py
tests/test_ingest/: test_probe.py  test_registry.py  test_transcoder.py
tests/test_interchange/: test_otio_export.py  test_otio_import.py
tests/test_mcp/: test_jobs.py  test_server.py  test_types.py
tests/test_optimize/: test_artifacts.py  test_builtin_data.py  test_campaign.py  test_datasets.py  test_evaluate.py  test_metrics.py  test_metrics_forbidden.py  test_public_api.py  test_store.py
tests/test_plugins/: test_discovery.py  test_loader.py  test_namespace.py
tests/test_preview/: test_cache.py  test_frame.py  test_server.py
tests/test_project/: test_operations.py  test_snapshot_turns.py  test_timeline.py
tests/test_render/: test_compositor.py  test_parallel.py  test_presets.py  test_proxy.py  test_segment.py
tests/test_skills/: test_discovery.py  test_loader.py
tests/test_tools/: test_aces_config.py  test_audio.py  test_capabilities.py  test_chroma_key.py  test_classify.py  test_color.py  test_color_ops.py  test_compositing.py  test_compositing_ops.py  test_compositing_shaders.py  test_download.py  test_download_ops.py  test_edit.py  test_feedback_loop.py  test_fps_utils.py  test_idt_detect.py  test_mask_eval.py  test_model_manager.py  test_motion_graphics.py  test_motion_graphics_ops.py  test_proxy.py  test_rotoscope.py  test_rotoscope_backends.py  test_rotoscope_e2e.py  test_rough_cut.py  test_scene.py  test_search_brave.py  test_search_protocol.py  test_search_tavily.py  test_snapshots.py  test_speed.py  test_timeline_info.py  test_transcribe.py  test_transcript_edit.py  test_transitions.py  test_transitions_tolerance.py  test_verify.py  test_vision.py  test_whisper_aligner.py
tests/test_web/: test_api.py  test_chat_integration.py  test_chat_protocol.py  test_chat_state_sync.py  test_timeline_model.py  test_undo_redo_api.py  test_web_integration.py
(+107 files in other folders)
