[project]
name = "ave"
version = "0.1.0"
description = "Agentic Video Editor — agent-driven video editing framework"
requires-python = ">=3.12"
dependencies = [
    "PyGObject>=3.48.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require NVIDIA GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests that take >10 seconds (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100
