[project]
name = "ave"
version = "0.1.0"
description = "Agentic Video Editor — agent-driven video editing framework"
requires-python = ">=3.12"
dependencies = [
    "PyGObject>=3.48.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

vision = [
    "onnxruntime-gpu>=1.20",
    "numpy>=1.26",
    "transformers>=4.49",
]
scene = [
    "scenedetect[opencv]>=0.6",
]
preview = [
    "aiohttp>=3.9",
]
web = [
    "aiohttp>=3.9",
    "anthropic>=0.43",
]
harness = [
    "inspect-ai>=0.3",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require NVIDIA GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests that take >10 seconds (deselect with '-m \"not slow\"')",
    "whisper: marks tests that require pywhispercpp (deselect with '-m \"not whisper\"')",
    "scenedetect: marks tests that require PySceneDetect",
    "vision: marks tests that require ONNX Runtime + vision model",
    "llm: marks tests that require Anthropic API key (deselect with '-m \"not llm\"')",
    "web: marks tests that require aiohttp for web UI",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
